--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "jest",
+    "test": "node scripts/run-tests.js",
+    "test:unit": "node scripts/run-tests.js unit",
+    "test:integration": "node scripts/run-tests.js integration",
+    "test:api": "node scripts/run-tests.js api",
+    "test:coverage": "node scripts/run-tests.js coverage",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:jest": "jest",
     "db:migrate": "node scripts/migrate.js",
     "db:seed": "node scripts/seed.js",
     "lint": "eslint .",
@@ -29,6 +33,9 @@
   "author": "Zybra Team",
   "license": "MIT",
   "dependencies": {
+    "@morpho-org/blue-sdk": "^3.0.9",
+    "@morpho-org/blue-sdk-ethers": "^3.0.0",
+    "@morpho-org/morpho-ts": "^2.4.1",
     "africastalking": "^0.6.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
